# tiny_stl

./: CMakeLists.txt  README.md
include/: allocator.h  construct.h  iterator.h  stream_iterator.h  type_traits.h  utility.h  vector.h
tests/: CMakeLists.txt  test_allocator.cpp  test_iterator.cpp
